--- a/recommender_system/index.html
+++ b/recommender_system/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   
-  <title>Recommender System | Hexo</title>
-  <meta name="author" content="John Doe">
+  <title>Recommender System | Tech Mind</title>
+  <meta name="author" content="xiangnash">
   
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <meta property="og:title" content="Recommender System"/>
-  <meta property="og:site_name" content="Hexo"/>
+  <meta property="og:site_name" content="Tech Mind"/>
 
   
     <meta property="og:image" content="undefined"/>
@@ -48,7 +48,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <a class="navbar-brand" href="/">Hexo</a>
+       <a class="navbar-brand" href="/">Tech Mind</a>
       <div class="collapse navbar-collapse nav-menu">
 		<ul class="nav navbar-nav">
 		  
@@ -131,13 +131,24 @@
 
 </div><!-- row -->
 
+<script type="text/javascript">
+var disqus_shortname = 'xiangnash';
+(function(){
+  var dsq = document.createElement('script');
+  dsq.type = 'text/javascript';
+  dsq.async = true;
+  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+}());
+</script>
+
 
 
 	</div>
   </div>
   <div class="container-narrow">
   <footer> <p>
-  &copy; 2017 John Doe
+  &copy; 2017 xiangnash
   
       with help from <a href="http://hexo.io/" target="_blank">Hexo</a> and <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a>. Theme by <a href="http://github.com/wzpan/hexo-theme-freemind/">Freemind</a>.    
 </p> </footer>
